# stack-intercept

./: .dockerignore  .env.example  .gitignore  BUILD_RELEASE.sh  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  benchmark.py  build.bat  build.cmd  docker-compose.trial.yml  docker-compose.yml  download_model.sh  test_demo.py  test_failover.py  test_mock_upstream.py  test_persistence_eviction_sse.py  test_proxy.py  test_routing.py  test_semantic_hit.py  test_semantic_safety.py
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: benchmarks.md  deployment.md  design.md  release-checklist.md  security.md  trial-runbook.md
docs/superpowers/plans/: 2026-06-28-corrected-proxy-architecture.md  2026-06-30-config-admin-metrics-plan.md
docs/superpowers/specs/: 2026-06-30-config-admin-metrics-design.md  2026-07-01-admin-config-endpoint.md  2026-07-04-v0.3.0-hnsw-prometheus-tenants.md
examples/openai-node/: README.md  app.mjs
examples/openai-python/: README.md  app.py
landing/: index.html
src/: cache.rs  config.rs  embeddings.rs  main.rs  router.rs
