[package]
name = "stack-intercept"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = { version = "0.7", features = ["json", "macros"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = "0.3"
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.19"
fast-hnsw = "1.0"
anyhow = "1.0"
sha2 = "0.10"
dashmap = "6"
rmp-serde = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
